<resources>
    <string name="app_name">NotesTakingApp</string>
    <string name="to_do">To do</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="scribble">Scribble</string>
    <string name="image">Image</string>
    <string name="voice">Voice</string>
    <string name="note_title">Note Title</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes…</string>
    <string name="back">Back</string>
    <string name="type_note_here">Type note here…</string>
    <string name="change_background">Change background</string>
    <string name="extras">Extra</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="give_tag">Give Tag</string>
    <string name="delete_note">Delete Note</string>
    <string name="confirm_delete_note">Confirm Delete Note</string>
    <string name="change_note_type">Change Note Type</string>
    <string name="mark_as_finished">Mark as Finished</string>
    <string name="press_quot_enter_quot_to_create_new_task">Press \"Enter\" to create new task</string>
    <string name="done">Done</string>
    <string name="none_title">No title</string>
    <string name="none_text">No text</string>
    <string name="select_to_delete">Select to delete</string>
    <string name="delete">Delete</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="expired">Expired</string>
    <!-- Sign in -->
    <string name="sign_in">Sign in</string>
    <string name="email" translatable="false">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don"'"t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google" translatable="false">Google</string>
    <!-- Sign up -->
    <string name="confirm_password">Confirm password</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="reenter_your_password">Re-enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="example_email" translatable="false">example@mail.com</string>
    <string name="edit_profile">Edit profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_question">Are you sure you want to sign out\n from the application?</string>
    <!-- Change password -->
    <string name="current_password">Current password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="new_password">New password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reenter_your_new_password">Re-enter your new password</string>
    <string name="default_web_client_id">683033972148-d8a8pqh693f242svcdbk1iluaertpo4n.apps.googleusercontent.com</string>
    <string name="there_are_no_notes_here">There are no notes here</string>
    <string name="there_are_no_tasks_there">There are no tasks there</string>
    <string name="text">Text</string>
    <string name="camera">Camera</string>
    <string name="add_voice">Add Voice</string>
    <string name="add_text">Add Text</string>
    <string name="add_image">Add Image</string>
    <string name="search_todo">Search todo…</string>
    <string name="sample_study_work">Sample: #study, #work, ...</string>
    <string name="home">Home</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="restart_app_to_apply">Restart app to apply</string>
    <string name="you_hava_work_to_do">You have work to do</string>
    <string name="set_time">Set time</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
</resources>