<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".authentication.SignInActivity">

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/text_color_state_accent"
        app:drawableStartCompat="@drawable/round_arrow_back_ios_24"
        app:drawableTint="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/change_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/_25sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/current_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_current_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:hint="@string/enter_your_current_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/new_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/confirm_new_password"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_reentered_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:hint="@string/reenter_your_new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_custom"
        android:backgroundTint="@color/text_color_state_accent"
        android:padding="@dimen/_8sdp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical"
        android:text="@string/change_password"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:gravity="center"/>
</LinearLayout>