<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/colorBackground"
    tools:context=".authentication.SignInActivity">

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/back_button_margin_start"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/back"
        android:textSize="@dimen/back_button_size"
        android:textColor="@color/color_state_accent"
        app:drawableStartCompat="@drawable/round_arrow_back_ios_24"
        app:drawableTint="@color/color_state_accent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/sign_up"
        android:textColor="@color/colorText"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/title_size"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/email"
        android:textColor="@color/colorText"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:backgroundTint="@color/colorCardBackground"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSubText"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        android:elevation="@dimen/_4sdp"/>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/password"
        android:textColor="@color/colorText"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:backgroundTint="@color/colorCardBackground"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/colorSubText"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        android:elevation="@dimen/_4sdp"/>

    <TextView
        android:id="@+id/text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/confirm_password"
        android:textColor="@color/colorText"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/_16sdp"/>
    <EditText
        android:id="@+id/input_reentered_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_search"
        android:backgroundTint="@color/colorCardBackground"
        android:hint="@string/reenter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/colorSubText"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_12sdp"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        android:elevation="@dimen/_4sdp"/>

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_custom"
        android:backgroundTint="@color/color_state_accent"
        android:padding="@dimen/_8sdp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical"
        android:text="@string/sign_up"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/bold"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:elevation="@dimen/_4sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/text_already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorText"
            android:textStyle="normal"
            android:textSize="@dimen/_11sdp"/>
        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            android:textSize="@dimen/_11sdp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_or_sign_up_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/colorText"
        android:textStyle="normal"
        android:textSize="@dimen/_11sdp"/>

    <TextView
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/button_custom"
        android:backgroundTint="#FBE38A"
        android:gravity="center"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:text="@string/google"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/bold"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/google_icon"
        android:drawablePadding="@dimen/_8sdp"
        android:elevation="@dimen/_4sdp"/>


</LinearLayout>